-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
We observed that when mounting MDT with HSM enable, mount command take minutes compare to seconds as before. We saw this in the log
[53618.238941] Lustre: DEBUG MARKER: mkdir -p /mnt/lustre-mds2; mount -t lustre -o localrecov /dev/mapper/mds2_flakey /mnt/lustre-mds2 [53618.624098] LDISKFS-fs (dm-6): mounted filesystem with ordered data mode. Opts: user_xattr,errors=remount-ro,no_mbcache,nodelalloc [53720.390690] Lustre: 1722736:0:(mdt_coordinator.c:1114:mdt_hsm_cdt_start()) lustre-MDT0001: trying to init HSM before MDD [53720.392834] LustreError: 1722736:0:(mdt_coordinator.c:1125:mdt_hsm_cdt_start()) lustre-MDT0001: cannot take the layout locks needed for registered restore: -2 [53720.398049] LustreError: 1722741:0:(mdt_coordinator.c:1090:mdt_hsm_cdt_start()) lustre-MDT0001: Coordinator already started or stopping [53720.400681] Lustre: lustre-MDT0001: Imperative Recovery not enabled, recovery window 60-180 [53720.424872] Lustre: lustre-MDT0001: in recovery but waiting for the first client to connect [53720.953893] Lustre: DEBUG MARKER: /usr/sbin/lctl get_param -n health_check [53722.067555] Lustre: DEBUG MARKER:
Seems related to LU-13920
- is related to
-
LU-13920 HSM: hsm_actions are not processed after MDS failover
-
- Resolved
-